fixed alignment of text

--- a/landing/assets/css/pages-styles.css
+++ b/landing/assets/css/pages-styles.css
@@ -113,7 +113,4 @@
     margin-top: 3rem;
   }
 }
-p {
-  text-align: justify;
-  text-justify: inter-word;
-}
+
