--- a/landing/assets/css/style.css
+++ b/landing/assets/css/style.css
@@ -331,3 +331,7 @@ form {
   }
 }
 
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
